# aphasia-support-app

./: .gitignore  AphasiaFrame.cpp  AphasiaFrame.h  CMakeLists.txt  LICENSE  PhrasesView.cpp  PhrasesView.h  guistring.cpp  guistring.h  main.cpp
